--- a/main.html
+++ b/main.html
@@ -8,7 +8,7 @@
   </head>
   <body>
 
-    <h1>XPath - JS</h1>
+    <h1 class="centered">XPath - JS</h1>
     <hr/>
 
     <h2>Document XML</h2>
@@ -18,23 +18,47 @@
     <div>Le document traite de <span class="var" id="subject"></span></div>
     <div>Il contient <span class="var" id="nb_items"></span> <span class="var" id="name_item"></span></div>
 
+    <hr/>
+    <h1>Expression XPath</h1>
+    <h2>Expression</h2>
+    <input type="text" id="inp_expression"/>
+
+    <h2>Résultat</h2>
+    <span class="var" id="result">
+
+
+
     <script>
       $(document).ready(function(){
         const parser = new DOMParser();
-        let   xmldoc = parser.parseFromString("", 'text/xml');
-
+        let   xmldoc = parser.parseFromString($("#demo").val(), 'text/xml');
+        let   xmlepr = $("#inp_expression").val()
 
 
         $("#demo").keyup(function(){
           xmldoc = parser.parseFromString($(this).val(), 'text/xml');
-          // console.log($(this).val());
           $("#subject").html(xmldoc.documentElement.tagName);
           $("#nb_items").html(xmldoc.documentElement.childNodes.length);
           $("#name_item").html(xmldoc.documentElement.childNodes[1].tagName);
-
-
-          console.log();
         });
+
+        $("#inp_expression").keyup(function(){
+          $("#result").html("");
+          xmlepr = $("#inp_expression").val()
+          xmldoc = parser.parseFromString($("#demo").val(), 'text/xml');
+          nodes = xmldoc.evaluate(xmlepr, xmldoc, null, XPathResult.ANY_TYPE, null);
+
+          let result = nodes.iterateNext();
+          while(result){
+            $("#result").append(result.textContent +"<br/>")
+            result = nodes.iterateNext();
+           }
+        });
+
+
+
+
+
       });
     </script>
   </body>
